# mail_tfrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docker.yml
mail_tfrs/: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.snippet.yml
mail_tfrs/src/: lib.rs  mail.rs  pipeline.rs
tfrs/: Cargo.toml  Makefile
tfrs/assets/: tokenizer.json
tfrs/src/: lib.rs
tfrs/src/model/: decoder.rs  encoder.rs  mod.rs  norm.rs  transformer.rs
tfrs/src/model/attention/: attention.rs  mod.rs
tfrs/src/model/embedding/: embeddings.rs  mod.rs
tfrs/src/model/nn/: backward.rs  forward.rs  init.rs  mod.rs  nn.rs
tfrs/src/model/tokenizer/: mod.rs  tokenizer.rs
tfrs/src/train/: classifier.rs  data.rs  mod.rs  train.rs
tfrs/src/utils/: activation.rs  loss.rs  mod.rs  optimizer.rs  persist.rs  xavier.rs
